--- a/growbox_control_desktop_app1/growboxcontrol.ui
+++ b/growbox_control_desktop_app1/growboxcontrol.ui
@@ -23,6 +23,12 @@
      <height>21</height>
     </rect>
    </property>
+   <widget class="QMenu" name="menuGtest1">
+    <property name="title">
+     <string>Gtest1</string>
+    </property>
+   </widget>
+   <addaction name="menuGtest1"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
