--- a/growbox_control_desktop_app1/growboxcontrol.ui
+++ b/growbox_control_desktop_app1/growboxcontrol.ui
@@ -17,7 +17,7 @@
    <widget class="QWidget" name="verticalLayoutWidget">
     <property name="geometry">
      <rect>
-      <x>29</x>
+      <x>20</x>
       <y>20</y>
       <width>751</width>
       <height>80</height>
@@ -26,8 +26,75 @@
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
       <widget class="QStackedWidget" name="stackedScreens">
-       <widget class="QWidget" name="pageGrowbox"/>
-       <widget class="QWidget" name="pageInfo"/>
+       <widget class="QWidget" name="pageGrowbox">
+        <widget class="QLabel" name="label">
+         <property name="geometry">
+          <rect>
+           <x>10</x>
+           <y>0</y>
+           <width>49</width>
+           <height>16</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>Growbox</string>
+         </property>
+        </widget>
+        <widget class="QLabel" name="label_5">
+         <property name="geometry">
+          <rect>
+           <x>10</x>
+           <y>40</y>
+           <width>101</width>
+           <height>16</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>Connection state:</string>
+         </property>
+        </widget>
+       </widget>
+       <widget class="QWidget" name="pageInfo">
+        <widget class="QLabel" name="label_2">
+         <property name="geometry">
+          <rect>
+           <x>20</x>
+           <y>5</y>
+           <width>49</width>
+           <height>16</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>Info</string>
+         </property>
+        </widget>
+        <widget class="QLabel" name="label_4">
+         <property name="geometry">
+          <rect>
+           <x>370</x>
+           <y>40</y>
+           <width>49</width>
+           <height>16</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>v0.1</string>
+         </property>
+        </widget>
+        <widget class="QLabel" name="label_3">
+         <property name="geometry">
+          <rect>
+           <x>340</x>
+           <y>20</y>
+           <width>91</width>
+           <height>16</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>Growbox Control</string>
+         </property>
+        </widget>
+       </widget>
       </widget>
      </item>
     </layout>
@@ -44,7 +111,7 @@
    </property>
    <widget class="QMenu" name="menuGtest1">
     <property name="title">
-     <string>Gtest1</string>
+     <string>Growbox</string>
     </property>
     <addaction name="actionGtest2"/>
     <addaction name="actiontest3"/>
