--- a/3growbox_qtwidget/GrowBoxDesktop/mainwindow.ui
+++ b/3growbox_qtwidget/GrowBoxDesktop/mainwindow.ui
@@ -20,77 +20,138 @@
       <x>10</x>
       <y>0</y>
       <width>781</width>
-      <height>581</height>
+      <height>601</height>
      </rect>
     </property>
     <property name="currentIndex">
      <number>5</number>
     </property>
-    <widget class="QWidget" name="tab_1status">
+    <widget class="QWidget" name="tab1status">
      <attribute name="title">
       <string>Status</string>
      </attribute>
-     <widget class="QLineEdit" name="lineEdit_IP">
-      <property name="geometry">
-       <rect>
-        <x>580</x>
-        <y>10</y>
-        <width>108</width>
-        <height>24</height>
-       </rect>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="pushButton_CONNECT">
-      <property name="geometry">
-       <rect>
-        <x>694</x>
-        <y>10</y>
-        <width>80</width>
-        <height>24</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>POŁĄCZ</string>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_IP">
-      <property name="geometry">
-       <rect>
-        <x>528</x>
-        <y>10</y>
-        <width>46</width>
-        <height>24</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Adres IP:</string>
-      </property>
-     </widget>
     </widget>
-    <widget class="QWidget" name="tab_2cam">
+    <widget class="QWidget" name="tab2_cam">
      <attribute name="title">
       <string>Cam</string>
      </attribute>
     </widget>
-    <widget class="QWidget" name="tab_3harm">
+    <widget class="QWidget" name="tab3_harm">
      <attribute name="title">
       <string>Harmonogram</string>
      </attribute>
     </widget>
-    <widget class="QWidget" name="tab_4logs">
+    <widget class="QWidget" name="tab4_logs">
      <attribute name="title">
       <string>Logi</string>
      </attribute>
     </widget>
-    <widget class="QWidget" name="tab_5settings">
+    <widget class="QWidget" name="tab5settings">
      <attribute name="title">
       <string>Ustawienia</string>
      </attribute>
+     <widget class="QCheckBox" name="checkBox">
+      <property name="geometry">
+       <rect>
+        <x>540</x>
+        <y>20</y>
+        <width>101</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>AutoConnect</string>
+      </property>
+     </widget>
+     <widget class="QWidget" name="">
+      <property name="geometry">
+       <rect>
+        <x>280</x>
+        <y>20</y>
+        <width>248</width>
+        <height>26</height>
+       </rect>
+      </property>
+      <layout class="QHBoxLayout" name="horizontalLayout_2">
+       <item>
+        <widget class="QLabel" name="label_IP">
+         <property name="text">
+          <string>Adres IP:</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLineEdit" name="lineEdit_IP"/>
+       </item>
+       <item>
+        <widget class="QPushButton" name="pushButton_CONNECT">
+         <property name="text">
+          <string>POŁĄCZ</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
     </widget>
-    <widget class="QWidget" name="tab_6info">
+    <widget class="QWidget" name="tab6_info">
+     <property name="styleSheet">
+      <string notr="true">#tab6_info {
+    background-image:url(:/new/img/img/forest2.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: #333333;
+}</string>
+     </property>
      <attribute name="title">
       <string>Info</string>
      </attribute>
+     <widget class="QGroupBox" name="groupBox">
+      <property name="geometry">
+       <rect>
+        <x>270</x>
+        <y>110</y>
+        <width>279</width>
+        <height>181</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: rgba(0, 70, 0, 204);
+border-radius: 8px;
+border: 4px solid #44ff07;
+color: white;
+padding: 8px;</string>
+      </property>
+      <property name="title">
+       <string/>
+      </property>
+      <property name="flat">
+       <bool>false</bool>
+      </property>
+      <property name="checkable">
+       <bool>false</bool>
+      </property>
+      <layout class="QHBoxLayout" name="horizontalLayout_3">
+       <item>
+        <widget class="QLabel" name="label">
+         <property name="autoFillBackground">
+          <bool>false</bool>
+         </property>
+         <property name="text">
+          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;GrowBox Desktop&lt;br/&gt;&lt;br/&gt;Sterowanie growboxem przez siec LAN&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;wersja: &lt;span style=&quot; color:#ff0000;&quot;&gt;0.0.2&lt;/span&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;by &lt;span style=&quot; color:#55ff00;&quot;&gt;wojtron&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+         </property>
+         <property name="textFormat">
+          <enum>Qt::TextFormat::AutoText</enum>
+         </property>
+         <property name="scaledContents">
+          <bool>false</bool>
+         </property>
+         <property name="wordWrap">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
     </widget>
    </widget>
    <widget class="QWidget" name="">
@@ -99,7 +160,7 @@
       <x>530</x>
       <y>40</y>
       <width>248</width>
-      <height>26</height>
+      <height>50</height>
      </rect>
     </property>
     <layout class="QHBoxLayout" name="horizontalLayout"/>
