--- a/3growbox_qtwidget/GrowBoxDesktop/resources.qrc
+++ b/3growbox_qtwidget/GrowBoxDesktop/resources.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/new/img">
         <file>img/forest1.jpg</file>
+        <file>img/forest2.jpg</file>
     </qresource>
 </RCC>
