--- a/3growbox_qtwidget/GrowBoxDesktop/mainwindow.ui
+++ b/3growbox_qtwidget/GrowBoxDesktop/mainwindow.ui
@@ -105,21 +105,22 @@
      <attribute name="title">
       <string>Info</string>
      </attribute>
-     <widget class="QGroupBox" name="groupBox">
+     <widget class="QGroupBox" name="groupBoxInfo">
       <property name="geometry">
        <rect>
-        <x>260</x>
+        <x>270</x>
         <y>110</y>
-        <width>280</width>
-        <height>180</height>
+        <width>250</width>
+        <height>150</height>
        </rect>
       </property>
       <property name="styleSheet">
-       <string notr="true">background-color: rgba(0, 70, 0, 204);
+       <string notr="true">#groupBoxInfo{
+background-color: rgba(0, 70, 0, 204);
 border-radius: 8px;
 border: 4px solid #44ff07;
 color: white;
-padding: 8px;</string>
+padding: 8px;}</string>
       </property>
       <property name="title">
        <string/>
@@ -137,7 +138,7 @@ padding: 8px;</string>
           <bool>false</bool>
          </property>
          <property name="text">
-          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;GrowBox Desktop&lt;br/&gt;&lt;br/&gt;Sterowanie growboxem przez siec LAN&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;wersja: &lt;span style=&quot; color:#ff0000;&quot;&gt;0.0.2&lt;/span&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;by &lt;span style=&quot; color:#55ff00;&quot;&gt;wojtron&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;GrowBox Desktop&lt;br/&gt;&lt;br/&gt;Sterowanie growboxem przez siec LAN&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;wersja: &lt;span style=&quot; color:#ff0000;&quot;&gt;0.0.3&lt;/span&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;by &lt;span style=&quot; color:#55ff00;&quot;&gt;wojtron&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
          </property>
          <property name="textFormat">
           <enum>Qt::TextFormat::AutoText</enum>
